--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,10 @@ github_username:  luannt2909
 theme: minima
 minima:
   date_format: "%Y-%m-%d"
+  skin: dark
 #remote_theme: jekyll/minima@3cdd14d
+#remote_theme: pages-themes/time-machine@v0.2.0
+
 #plugins:
 #  - jekyll-feed
 #  - jekyll-remote-theme
